--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "Thoughts from a meetup on Agile Leadership"
+   subtitle: "This Quick Take turned into a full episode"
+   summary: "I went to a meetup on Leadership and Agile and there were a few slides I found interesting, the more I talked about them the deeper I went.  Some really interesting point on making sure you and your agile team are doing the right things. The event was at: https://www.meetup.com/Dublin-Tech-Talks/events/255963191/ | Max: https://www.linkedin.com/in/maxcottica/ | Helen: https://www.linkedin.com/in/helen-duffy-a49b97a/"
+   encoded: "I went to a meetup on Leadership and Agile and there were a few slides I found interesting, the more I talked about them the deeper I went.  Some really interesting point on making sure you and your agile team are doing the right things. The event was at: https://www.meetup.com/Dublin-Tech-Talks/events/255963191/ <br /> Max: https://www.linkedin.com/in/maxcottica/ <br /> Helen: https://www.linkedin.com/in/helen-duffy-a49b97a/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/019-Agile-Leadership.mp3
+   date: Fri, 25 Jan 2019 04:07:54 GMT
+   duration: "26:34"
+   length: 25511809
+   transcript: "019"
+
  - title: "Guests: Jennifer Griffin and Brian Holohan of Turn2me E-Mental Health"
    subtitle: "Anonymous support for your mental health from your own computer"
    summary: "I sat down with Jennifer Griffin and Brian Holohan of Turn2me E-Mental Health to discuss their services and mental health.  turn2me.org was founded in 2009 stemming from the very personal experiences of brothers Oisin and Diarmuid Scollard, who lost their brother to suicide in 2003. They had a vision to create a web space for people to share, discuss and offload personal problems, find support and get useful information.  Turn2Me provides a 3 tiered approach to supporting mental well-being - Self Help, support groups and Professional Support. Remain anonymous, express yourself and share your experiences without fear of recognition or judgement.  | https://turn2me.org/ | https://www.facebook.com/turn2me | https://twitter.com/turn2me"
