--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,13 @@
+ - title: "QT: The Bullet Journal"
+   subtitle: "The Analog Method for the Digital Age"
+   summary: "You need this in your life: https://bulletjournal.com/ this is a life philosophy as much as a note taking technique. I've tried the #BuJo #BulletJournal before, and it didn't take.  This is how it integrated in my life after listenting to the new audio book by Ryder Carroll https://www.audible.co.uk/pd/The-Bullet-Journal-Method-Audiobook/0008261393"
+   encoded: "You need this in your life: https://bulletjournal.com/ this is a life philosophy as much as a note taking technique. <br /> I've tried the #BuJo #BulletJournal before, and it didn't take.<br />  This is how it integrated in my life after listenting to the new audio book by Ryder Carroll https://www.audible.co.uk/pd/The-Bullet-Journal-Method-Audiobook/0008261393"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-009-Bullet-Journal.mp3
+   date: Tue, 29 Jan 2019 04:42:54 GMT
+   duration: "15:12"
+   length: 14596387
+   transcript: "QT-009"
+
  - title: "Thoughts from a meetup on Agile Leadership"
    subtitle: "This Quick Take turned into a full episode"
    summary: "I went to a meetup on Leadership and Agile and there were a few slides I found interesting, the more I talked about them the deeper I went.  Some really interesting point on making sure you and your agile team are doing the right things. The event was at: https://www.meetup.com/Dublin-Tech-Talks/events/255963191/ | Max: https://www.linkedin.com/in/maxcottica/ | Helen: https://www.linkedin.com/in/helen-duffy-a49b97a/"
