020-Felipe-Coelho-Kussik.mp3

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Felipe Coelho Kussik "
+   subtitle: "Medit's UX/UI Designer and User Advocate"
+   summary: "I sat down with Felipe to discuss UX/UI and doing the best for our users. Felipe on Twitter https://twitter.com/seufelipe and on Instagram https://www.instagram.com/seufelipe/"
+   encoded: "I sat down with Felipe to discuss UX/UI and doing the best for our users. <br />Felipe on Twitter https://twitter.com/seufelipe and on Instagram https://www.instagram.com/seufelipe/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/020-Felipe-Coelho-Kussik.mp3
+   date: Fri, 1 Feb 2019 04:42:54 GMT
+   duration: "45:19"
+   length: 43515819
+   transcript: "020"
+   image: https://pbs.twimg.com/profile_images/1044959722313601024/7Hw3__37_400x400.jpg
+
  - title: "QT: The Bullet Journal"
    subtitle: "The Analog Method for the Digital Age"
    summary: "You need this in your life: https://bulletjournal.com/ this is a life philosophy as much as a note taking technique. I've tried the #BuJo #BulletJournal before, and it didn't take.  This is how it integrated in my life after listenting to the new audio book by Ryder Carroll https://www.audible.co.uk/pd/The-Bullet-Journal-Method-Audiobook/0008261393"
