initial slider from April

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,13 @@ twitter_username: dave_albert
 github_username:  davealbert
 instagram_base: https://api.instagram.com/oembed/?url=http://instagr.am/p/
 instagram_items:
+    - BtAvDPKATNk
+    - Bsm_JW1ATZQ
+    - BsiCqVZD5-h
+    - BsfQvfBg5UY
+    - Bscr9IMg3qk
+    - BsaHI4Rjrfn
+    - BsYmpbMh0sL
     - BrIDJu4AvR_
     - BqOvg1tgguy
     - BoRZpaMgK5S
