QT-010-Jira-Kickoff-Meetings

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "QT: Jira, and kick-off meetings"
+   subtitle: "Better tracking and reducing cycle time"
+   summary: "Well Jira has won the battle ... as of now.  And we have found a way to reduce cycle time by having a couple of kick-off meetings."
+   encoded: "Well Jira has won the battle ... as of now.  And we have found a way to reduce cycle time by having a couple of kick-off meetings."
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-010-Jira-Kickoff-Meetings.mp3
+   date: Thu, 6 Mar 2019 04:20:54 GMT
+   duration: "18:29"
+   length: 17744874
+   transcript: "QT-010"
+   image: /images/guests/QT-010-Jira-Kickoff-Meetings.jpg
+
  - title: "Guest Felipe Coelho Kussik "
    subtitle: "Medit's UX/UI Designer and User Advocate"
    summary: "I sat down with Felipe to discuss UX/UI and doing the best for our users. Felipe on Twitter https://twitter.com/seufelipe and on Instagram https://www.instagram.com/seufelipe/"
