022-lewis-denham-parry

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Lewis Denham-Parry"
+   subtitle: "Lewis Denham-Parry Co-founder of Cloud Native Wales joins me to talk about mental health in technology"
+   summary: "Find out the parallels of mental health to monoliths versus microservices! You can find Lewis here: https://twitter.com/denhamparry | https://denhamparry.co.uk/ | https://www.linkedin.com/in/denhamparry/"
+   encoded: "Find out the parallels of mental health to monoliths versus microservices! You can find Lewis here: https://twitter.com/denhamparry <br /> https://denhamparry.co.uk/ <br /> https://www.linkedin.com/in/denhamparry/ "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/022-lewis-denham-parry.mp3
+   date: Tue, 12 Mar 2019 04:20:54 GMT
+   duration: "54:48"
+   length: 52614144
+   transcript: "022"
+   image: /images/guests/lewis-denham-parry.jpg
+
  - title: "Guest Joe Morgan"
    subtitle: "I am joined by Joe Morgan a UI Developer, Speaker, Author, JavaScript enthusiast"
    summary: "Joe Morgan is Founder and CoOrganizer of the Kansas City React Meetup, a UI developer, and the author of 'Simplifying JavaScript' https://pragprog.com/book/es6tips/simplifying-javascript | https://slate.com/human-interest/2018/12/against-teaching-kids-to-code-creativity-problem-solving.html | https://ponyfoo.com/ | https://twitter.com/joesmorgan | https://www.linkedin.com/in/joe-morgan-42458a15/ "
