*moving too fast*

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -221,7 +221,7 @@
    transcript: "QT-006"
 
  - title: "QT: Speed Kills"
-   subtitle: "A quick take on why moving to fast can be a problem."
+   subtitle: "A quick take on why moving too fast can be a problem."
    summary: "A startup needs to move quickly, but sometimes we sometimes try to move so vast that we cost ourselves more time fixing what we broke."
    encoded: "A startup needs to move quickly, but sometimes we sometimes try to move so vast that we cost ourselves more time fixing what we broke."
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/QT-005-Speed-Kills.mp3
