--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Angela Duffy"
+   subtitle: "I am joind by Angela Duffy a Venture Investment Leader (VIL) of the NDRC"
+   summary: "Angela and I discuss the what's involved in mentoring a startup, some things to do and some things to avoid as a startup to make the journey better.  angela.duffy@ndrc.ie | https://www.linkedin.com/in/angeladuffy1/ | https://twitter.com/_angela_duffy "
+   encoded: "Angela and I discuss the what's involved in mentoring a startup, some things to do and some things to avoid as a startup to make the journey better.  </ br> angela.duffy@ndrc.ie </ br> https://www.linkedin.com/in/angeladuffy1/ </ br> https://twitter.com/_angela_duffy "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/023-angela-duffy.mp3
+   date: Mon, 22 Mar 2019 04:20:54 GMT
+   duration: "56:59"
+   length: 54707930
+   transcript: "023"
+   image: /images/guests/Angela-Duffy.jpg
+
  - title: "Guest Lewis Denham-Parry"
    subtitle: "Lewis Denham-Parry Co-founder of Cloud Native Wales joins me to talk about mental health in technology"
    summary: "Find out the parallels of mental health to monoliths versus microservices! You can find Lewis here: https://twitter.com/denhamparry | https://denhamparry.co.uk/ | https://www.linkedin.com/in/denhamparry/"
