--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Andrew Mullaney"
+   subtitle: "I am joined by Andrew Mullaney the former CTO and Co-founder of NewsWhip"
+   summary: "Andrew and I discuss starting NewsWhip, life as a CTO, and his new venture.  https://www.linkedin.com/in/andrew-mullaney-669724a/ | https://twitter.com/andrewmull "
+   encoded: "Andrew and I discuss starting NewsWhip, life as a CTO, and his new venture. </ br>  https://www.linkedin.com/in/andrew-mullaney-669724a/ </br> https://twitter.com/andrewmull "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/024-andrew-mullaney.mp3
+   date: Wed, 27 Mar 2019 04:20:54 GMT
+   duration: "01:03:44"
+   length: 61191313
+   transcript: "024"
+   image: /images/guests/andrew-mullaney.jpg
+
  - title: "Guest Angela Duffy"
    subtitle: "I am joind by Angela Duffy a Venture Investment Leader (VIL) of the NDRC"
    summary: "Angela and I discuss the what's involved in mentoring a startup, some things to do and some things to avoid as a startup to make the journey better.  angela.duffy@ndrc.ie | https://www.linkedin.com/in/angeladuffy1/ | https://twitter.com/_angela_duffy "
