--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Adam Coulon"
+   subtitle: "I am joined by Adam Coulon the CTO and Co-founder of WiGo Trips"
+   summary: "In this episode I get to talk to Adam about travel, working in a bootstrapped startup, and hear a few amazing perls of wisdom about life in general.  | adam@wigotrips.com | https://www.linkedin.com/in/adam-coulon-a38963135/ | https://twitter.com/FooBarKing"
+   encoded: "In this episode I get to talk to Adam about travel, working in a bootstrapped startup, and hear a few amazing perls of wisdom about life in general.  </ br> adam@wigotrips.com </ br> https://www.linkedin.com/in/adam-coulon-a38963135/ </ br> https://twitter.com/FooBarKing"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/025-adam-coulon.mp3
+   date: Thu, 28 Mar 2019 04:20:54 GMT
+   duration: "59:08"
+   length: 39948336
+   transcript: "025"
+   image: /images/guests/adam-coulon.jpg
+
  - title: "Guest Andrew Mullaney"
    subtitle: "I am joined by Andrew Mullaney the former CTO and Co-founder of NewsWhip"
    summary: "Andrew and I discuss starting NewsWhip, life as a CTO, and his new venture.  https://www.linkedin.com/in/andrew-mullaney-669724a/ | https://twitter.com/andrewmull "
