--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest James Wynne"
+   subtitle: "James and I talk about Ops Fire drills and exercises"
+   summary: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/detail/contact-info/"
+   encoded: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. <br> jawynne@gmail.com <br> https://www.linkedin.com/in/jawynne/detail/contact-info/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/026-James-Wynne.mp3
+   date: Fri, 12 Apr 2019 04:20:54 GMT
+   duration: "57:53"
+   length: 42500132
+   transcript: "026"
+   image: /images/guests/James-Wynne.jpg
+
  - title: "Guest Frances Smyth"
    subtitle: "I am joined by Frances Smyth, Agile Coach, ClaimVantage"
    summary: "Fran and I have a great discuss on helping a team work in a more agile fashion, and how this has worked in her experiance. https://www.linkedin.com/in/francessmyth/ | https://twitter.com/Fran_Frankly"
