--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,7 +1,7 @@
  - title: "Guest James Wynne"
    subtitle: "James and I talk about Ops Fire drills and exercises"
-   summary: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/detail/contact-info/"
-   encoded: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. <br> jawynne@gmail.com <br> https://www.linkedin.com/in/jawynne/detail/contact-info/"
+   summary: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/detail/contact-info/ | The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
+   encoded: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. <br> jawynne@gmail.com <br> https://www.linkedin.com/in/jawynne/detail/contact-info/ <br> The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/026-James-Wynne.mp3
    date: Fri, 12 Apr 2019 04:20:54 GMT
    duration: "57:53"
