--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Allen Wixted"
+   subtitle: "Allen is the founder of an Augmented Reality company"
+   summary: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes. https://www.linkedin.com/in/allen-wixted-6638a7b6/ | https://www.instagram.com/allenwixted/"
+   encoded: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes. https://www.linkedin.com/in/allen-wixted-6638a7b6/ <br> https://www.instagram.com/allenwixted/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/028-Allen-Wixted.mp3
+   date: Mon, 15 Apr 2019 04:20:54 GMT
+   duration: "45:44"
+   length: 43919424
+   transcript: "028"
+   image: /images/guests/Allen-Wixted.jpg
+
  - title: "Guest James Wynne"
    subtitle: "James and I talk about Ops Fire drills and exercises"
    summary: "After hearing a presentation about ops fire drills given by James, which was something already on my mind, I wanted to talk with James more about the topic. jawynne@gmail.com | https://www.linkedin.com/in/jawynne/detail/contact-info/ | The Dungeons and Dragons talk is https://www.youtube.com/watch?v=WmizLzszopw"
