029-John-Doran.mp3

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest John Doran"
+   subtitle: "John is the Director Of Engineering at Phorest Salon Software, speaker, and co-organiser of Ship-It-Con 2019 in Dublin Ireland "
+   summary: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" https://twitter.com/johnwildoran | https://shipitcon.com/ | https://nothingventured.rocks/ | https://www.phorest.com/careers/"
+   encoded: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" https://twitter.com/johnwildoran <br> https://shipitcon.com/ <br> https://nothingventured.rocks/ <br> https://www.phorest.com/careers/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/029-John-Doran.mp3
+   date: Wed, 08 May 2019 04:20:54 GMT
+   duration: "42:24"
+   length: 4071800
+   transcript: "029"
+   image: /images/guests/John-Doran.jpg
+
  - title: "Guest Allen Wixted"
    subtitle: "Allen is the founder of an Augmented Reality company"
    summary: "Allen the founder of 'No Place Like' and I discuss Augmented Reality, and starting up.  We also touch on some (pre)accelerator programmes. https://www.linkedin.com/in/allen-wixted-6638a7b6/ | https://www.instagram.com/allenwixted/"
