--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Guest Davy Engone"
+   subtitle: "Davy is the founder and Head of Engineering at Hackages"
+   summary: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy. | https://hackages.io/ | https://hackflix.dev/ | https://twitter.com/davyengone"
+   encoded: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy. <br> https://hackages.io/ <br> https://hackflix.dev/ <br> https://twitter.com/davyengone"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/030-Davy-Engone.mp3
+   date: Wed, 29 May 2019 04:20:54 GMT
+   duration: "01:03:51"
+   length: 61310431
+   transcript: "030"
+   image: /images/guests/Davy-Engon.jpg
+
  - title: "Guest John Doran"
    subtitle: "John is the Director Of Engineering at Phorest Salon Software, speaker, and co-organiser of Ship-It-Con 2019 in Dublin Ireland "
    summary: "John and I discuss his work, challenges, and improvments at Phorest Salon Software as well as Ship It Con 2019 \"A community driven non profit conference about Software Delivery.\" https://twitter.com/johnwildoran | https://shipitcon.com/ | https://nothingventured.rocks/ | https://www.phorest.com/careers/"
