--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "How can a business coach help you succeed with Mary Carroll"
+   subtitle: "Guest Mary Carroll"
+   summary: "Mary and I talk about business coaching and Emotional Intelligence (EQI) | http://idetermine.ie/ | info@idetermine.ie | https://twitter.com/i_determine"
+   encoded: "Mary and I talk about business coaching and Emotional Intelligence (EQI) <br> http://idetermine.ie/ <br> info@idetermine.ie <br> https://twitter.com/i_determine"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/031-Mary-Carroll.mp3
+   date: Tue, 02 Jul 2019 04:20:54 GMT
+   duration: "00:39:10"
+   length: 37601115
+   transcript: "031"
+   image: /images/guests/Marry-Carroll.jpg
+
  - title: "Guest Davy Engone"
    subtitle: "Davy is the founder and Head of Engineering at Hackages"
    summary: "Davy and I discuss a number of important elements of a startups including what happens if co-founders break up.  Hackages 'Where Hack Means Education', software development training, guidance, and consultancy. | https://hackages.io/ | https://hackflix.dev/ | https://twitter.com/davyengone"
