--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "What do you know about design sprints?"
+   subtitle: "Guest Rohan Perera talks with me about design sprints, and lean thinking"
+   summary: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking. | https://www.linkedin.com/in/rohan-perera/ | https://leandisruptor.com/ | rohan@leandisruptor.com | https://twitter.com/Rohan_LD"
+   encoded: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking. <br> https://www.linkedin.com/in/rohan-perera/ <br> https://leandisruptor.com/ <br> rohan@leandisruptor.com <br> https://twitter.com/Rohan_LD"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/032-Rohan-Perera.mp3
+   date: Tue, 09 Jul 2019 04:20:54 GMT
+   duration: "01:02:33"
+   length: 30025160
+   transcript: "032"
+   image: /images/guests/Rohan-Perera.jpg
+
  - title: "How can a business coach help you succeed with Mary Carroll"
    subtitle: "Guest Mary Carroll"
    summary: "Mary and I talk about business coaching and Emotional Intelligence (EQI) | http://idetermine.ie/ | info@idetermine.ie | https://twitter.com/i_determine"
