--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Diversity and Inclusion Manifesto ~ It's like the Agile Manifesto, but for humans."
+   subtitle: "Guest Tom Shaw discussing the Diversity and Inclusion Manifesto"
+   summary: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto | https://diversitymanifesto.org | https://twitter.com/tomwillfixit | https://www.linkedin.com/in/tomwillfixit/ "
+   encoded: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto <br> https://diversitymanifesto.org <br> https://twitter.com/tomwillfixit <br> https://www.linkedin.com/in/tomwillfixit/ "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/033-Tom-Shaw.mp3.mp3
+   date: Tue, 15 Jul 2019 04:20:54 GMT
+   duration: "00:30:32"
+   length: 14661817
+   transcript: "033"
+   image: /images/guests/Tom-Shaw.jpg
+
  - title: "What do you know about design sprints?"
    subtitle: "Guest Rohan Perera talks with me about design sprints, and lean thinking"
    summary: "Rohan Facilitator/Consultant/Design Sprint Master at Lean Disruptor talks with me about design sprints, and lean thinking. | https://www.linkedin.com/in/rohan-perera/ | https://leandisruptor.com/ | rohan@leandisruptor.com | https://twitter.com/Rohan_LD"
