--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Tackle Diversity and Inclusion challenges together, as a community with Vessy Tasheva"
+   subtitle: "Guest Vessy Tasheva - helping D and I leaders though an online community"
+   summary: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com | vessy@vessy.com | https://vessy.com/ | https://twitter.com/vessytash | https://www.linkedin.com/in/vesselinatasheva/ "
+   encoded: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com <br> vessy@vessy.com <br> https://vessy.com/ <br> https://twitter.com/vessytash <br> https://www.linkedin.com/in/vesselinatasheva/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/034-Vessy-Tasheva.mp3
+   date: Wed, 16 Jul 2019 04:20:54 GMT
+   duration: "00:56:42"
+   length: 27218355
+   transcript: "034"
+   image: /images/guests/Vessy-Tasheva.jpg
+
  - title: "Diversity and Inclusion Manifesto ~ It's like the Agile Manifesto, but for humans."
    subtitle: "Guest Tom Shaw discussing the Diversity and Inclusion Manifesto"
    summary: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto | https://diversitymanifesto.org | https://twitter.com/tomwillfixit | https://www.linkedin.com/in/tomwillfixit/ "
