035-Wondr.io.mp3~

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "What's it like starting a digital agency and managing multiple software products?"
+   subtitle: "Dermot O'Shea (Founder) and Peter Delaney (Director pf Product) join me to talk about Wondr.io"
+   summary: "Dermot talks with us about starting Wondr digital agency, and Peter talks with us about managing multiple software projects | WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses | https://wondr.io/ | https://twitter.com/wondrdublin | Dermot https://www.linkedin.com/in/dkos/ | Peter https://www.linkedin.com/in/peter-delaney-ba28a89/ "
+   encoded: "Dermot talks with us about starting Wondr digital agency, and Peter talks with us about managing multiple software projects <br> WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses <br> https://wondr.io/ <br> https://twitter.com/wondrdublin <br> Dermot https://www.linkedin.com/in/dkos/ <br> Peter https://www.linkedin.com/in/peter-delaney-ba28a89/ "
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/035-Wondr.io.mp3
+   date: Tue, 23 Jul 2019 04:20:54 GMT
+   duration: "01:02:05"
+   length: 29806568
+   transcript: "035"
+   image: /images/guests/Wondr.png
+
  - title: "Tackle Diversity and Inclusion challenges together, as a community with Vessy Tasheva"
    subtitle: "Guest Vessy Tasheva - helping D and I leaders though an online community"
    summary: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com | vessy@vessy.com | https://vessy.com/ | https://twitter.com/vessytash | https://www.linkedin.com/in/vesselinatasheva/ "
