--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -20,7 +20,7 @@
    transcript: "034"
    image: /images/guests/Vessy-Tasheva.jpg
 
- - title: "Diversity and Inclusion Manifesto ~ It's like the Agile Manifesto, but for humans."
+ - title: "Diversity and Inclusion Manifesto - It's like the Agile Manifesto, but for humans."
    subtitle: "Guest Tom Shaw discussing the Diversity and Inclusion Manifesto"
    summary: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto | https://diversitymanifesto.org | https://twitter.com/tomwillfixit | https://www.linkedin.com/in/tomwillfixit/ "
    encoded: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto <br> https://diversitymanifesto.org <br> https://twitter.com/tomwillfixit <br> https://www.linkedin.com/in/tomwillfixit/ "
