--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "Can you tell the story of your product value? Simon Wardley’s Value Chain Mapping can help."
+   subtitle: "Aidan Molloy Sr Product Manager joins us to discuss Wardley mapping."
+   summary: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement| Checkout this post for images to help understand what we are discussing.  https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c |  https://www.linkedin.com/in/aidanmolloy/ | https://twitter.com/aidan_molloy"
+   encoded: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement <br> Checkout this post for images to help understand what we are discussing.  https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c <br>   https://www.linkedin.com/in/aidanmolloy/ <br> https://twitter.com/aidan_molloy"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/036-Aidan-Molloy.mp3
+   date: Tue, 30 Jul 2019 04:20:54 GMT
+   duration: "00:50:28"
+   length: 24229111
+   transcript: "036"
+   image: /images/guests/Aidan-Molloy.png
+
  - title: "What's it like starting a digital agency and managing multiple software products?"
    subtitle: "Dermot O'Shea (Founder) and Peter Delaney (Director pf Product) join me to talk about Wondr.io"
    summary: "Dermot talks with us about starting WONDR - A Digital product Practice, and Peter talks with us about managing multiple software projects | WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses | https://wondr.io/ | https://twitter.com/wondrdublin | Dermot https://www.linkedin.com/in/dkos/ | Peter https://www.linkedin.com/in/peter-delaney-ba28a89/ "
