037-Felipe-Coelho-Kussik

--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,3 +1,14 @@
+ - title: "What's up Felipe? Social media reduction"
+   subtitle: "New episode asking Felipe Coelho Kussik What's up?"
+   summary: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits. | https://twitter.com/seufelipe | https://www.instagram.com/seufelipe/ | https://letterboxd.com/seufelipe/"
+   encoded: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits. <br> https://twitter.com/seufelipe <br> https://www.instagram.com/seufelipe/ <br> https://letterboxd.com/seufelipe/"
+   mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/037-Felipe-Coelho-Kussik.mp3
+   date: Tue, 06 Aug 2019 04:20:54 GMT
+   duration: "00:39:55"
+   length: 19161774
+   transcript: "037"
+   image: /images/guests/whats-up-felipe.png
+
  - title: "Can you tell the story of your product value? Simon Wardley’s Value Chain Mapping can help."
    subtitle: "Aidan Molloy Sr Product Manager joins us to discuss Wardley mapping."
    summary: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement| Checkout this post for images to help understand what we are discussing.  https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c |  https://www.linkedin.com/in/aidanmolloy/ | https://twitter.com/aidan_molloy"
