--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,7 +1,7 @@
  - title: "What's up Felipe? Social media reduction"
    subtitle: "New episode asking Felipe Coelho Kussik What's up?"
    summary: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits. | https://twitter.com/seufelipe | https://www.instagram.com/seufelipe/ | https://letterboxd.com/seufelipe/"
-   encoded: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits. <br> https://twitter.com/seufelipe <br> https://www.instagram.com/seufelipe/ <br> https://letterboxd.com/seufelipe/"
+   encoded: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits.  <br> <br> <a href='https://twitter.com/seufelipe' target='_blank'>https://twitter.com/seufelipe</a> <br> <a href='https://www.instagram.com/seufelipe/' target='_blank'>https://www.instagram.com/seufelipe/</a> <br> <a href='https://letterboxd.com/seufelipe/' target='_blank'>https://letterboxd.com/seufelipe/</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/037-Felipe-Coelho-Kussik.mp3
    date: Tue, 06 Aug 2019 04:20:54 GMT
    duration: "00:39:55"
@@ -12,7 +12,7 @@
  - title: "Can you tell the story of your product value? Simon Wardley’s Value Chain Mapping can help."
    subtitle: "Aidan Molloy Sr Product Manager joins us to discuss Wardley mapping."
    summary: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement| Checkout this post for images to help understand what we are discussing.  https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c |  https://www.linkedin.com/in/aidanmolloy/ | https://twitter.com/aidan_molloy"
-   encoded: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement <br> Checkout this post for images to help understand what we are discussing.  https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c <br>   https://www.linkedin.com/in/aidanmolloy/ <br> https://twitter.com/aidan_molloy"
+   encoded: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement <br> Checkout this post for images to help understand what we are discussing.  <br> <br> <a href='https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c' target='_blank'>https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c</a> <br> <a href='https://www.linkedin.com/in/aidanmolloy/' target='_blank'>https://www.linkedin.com/in/aidanmolloy/</a> <br> <a href='https://twitter.com/aidan_molloy' target='_blank'>https://twitter.com/aidan_molloy</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/036-Aidan-Molloy.mp3
    date: Tue, 30 Jul 2019 04:20:54 GMT
    duration: "00:50:28"
@@ -23,7 +23,7 @@
  - title: "What's it like starting a digital agency and managing multiple software products?"
    subtitle: "Dermot O'Shea (Founder) and Peter Delaney (Director pf Product) join me to talk about Wondr.io"
    summary: "Dermot talks with us about starting WONDR - A Digital product Practice, and Peter talks with us about managing multiple software projects | WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses | https://wondr.io/ | https://twitter.com/wondrdublin | Dermot https://www.linkedin.com/in/dkos/ | Peter https://www.linkedin.com/in/peter-delaney-ba28a89/ "
-   encoded: "Dermot talks with us about starting WONDR - A Digital product Practice, and Peter talks with us about managing multiple software projects <br> WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses <br> https://wondr.io/ <br> https://twitter.com/wondrdublin <br> Dermot https://www.linkedin.com/in/dkos/ <br> Peter https://www.linkedin.com/in/peter-delaney-ba28a89/ "
+   encoded: "Dermot talks with us about starting WONDR - A Digital product Practice, and Peter talks with us about managing multiple software projects <br> WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses <br> <a href='https://wondr.io/' target='_blank'>https://wondr.io/</a> <br> <a href='https://twitter.com/wondrdublin' target='_blank'>https://twitter.com/wondrdublin</a> <br> Dermot: <a href='https://www.linkedin.com/in/dkos/' target='_blank'>https://www.linkedin.com/in/dkos/</a> <br> Peter: <a href='https://www.linkedin.com/in/peter-delaney-ba28a89/' target='_blank'>https://www.linkedin.com/in/peter-delaney-ba28a89/</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/035-Wondr.io.mp3
    date: Tue, 23 Jul 2019 04:20:54 GMT
    duration: "01:02:05"
@@ -34,7 +34,7 @@
  - title: "Tackle Diversity and Inclusion challenges together, as a community with Vessy Tasheva"
    subtitle: "Guest Vessy Tasheva - helping D and I leaders though an online community"
    summary: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com | vessy@vessy.com | https://vessy.com/ | https://twitter.com/vessytash | https://www.linkedin.com/in/vesselinatasheva/ "
-   encoded: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com <br> vessy@vessy.com <br> https://vessy.com/ <br> https://twitter.com/vessytash <br> https://www.linkedin.com/in/vesselinatasheva/"
+   encoded: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com <br> <br> <a href='mailto:vessy@vessy.com' target='_blank'>vessy@vessy.com</a> <br> <a href='https://vessy.com/' target='_blank'>https://vessy.com/</a> <br> <a href='https://twitter.com/vessytash' target='_blank'>https://twitter.com/vessytash</a> <br> <a href='https://www.linkedin.com/in/vesselinatasheva' target='_blank'>https://www.linkedin.com/in/vesselinatasheva</a>"
    mp3: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/034-Vessy-Tasheva.mp3
    date: Wed, 16 Jul 2019 04:20:54 GMT
    duration: "00:56:42"
